--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.4",
     "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
